added title and header

--- a/recipes/burger.html
+++ b/recipes/burger.html
@@ -1,5 +1,8 @@
 <html>
-<head>worlds tastiest burger recpies</head>
+<head>
+<title>worlds tastiest burger recpies</title>
+</head>
 
+<h1><b>BURGER RECIPIE<b></h1>
 
 </html>
