added list and header
added a list of ingridients and title to that list

--- a/recipes/burger.html
+++ b/recipes/burger.html
@@ -1,8 +1,18 @@
 <html>
-<head>
-<title>worlds tastiest burger recpies</title>
-</head>
-
-<h1><b>BURGER RECIPIE<b></h1>
-
+	<head>
+		<title>worlds tastiest burger recpies</title>
+	</head>
+	<body>
+		<h1><b>BURGER RECIPIE<b></h1>
+		<br>
+		
+		<h3>ingridients<h3>
+		
+		<ul>
+		<li>burger patty<li>
+		<li>two pices of bread<li>
+		<li>ketchup<li>
+		<li>oil<li>
+		</ul>
+	</body>
 </html>
