fixed 2nd and 3rd header
these headers had closing tags instead of opening ones. The 2nd header is before ingridients and the third is before instructions

--- a/recipes/burger.html
+++ b/recipes/burger.html
@@ -6,7 +6,7 @@
 		<h1><b>BURGER RECIPIE<b></h1>
 		<br>
 		
-		<h3><b>ingridients<b><h3>
+		<h3><b>ingridients<b></h3>
 		
 		<ul>
 		<li>burger patty<li>
@@ -15,7 +15,7 @@
 		<li>oil<li>
 		</ul>
 
-		<h3><b>instructions<b><h3>
+		<h3><b>instructions<b></h3>
 
 		<p> Step one is to pour oil onto pan. Step two is to wait till the oil starts popping. Step three is to put the patty on the same pan. <br>
                     Step four is to wait till the patty has become brown to your liking. Step five is to put the patty in between the slices of bread. <br>
