added links between pages

--- a/recipes/burger.html
+++ b/recipes/burger.html
@@ -20,5 +20,7 @@
 		<p> Step one is to pour oil onto pan. Step two is to wait till the oil starts popping. Step three is to put the patty on the same pan. <br>
                     Step four is to wait till the patty has become brown to your liking. Step five is to put the patty in between the slices of bread. <br>
 	            Step six is to add ketchup between those same slices. Step seven is to enjoy in good health and moderation! </p>
+		<br>
+		<a href="../index.html>back to main page</a>
 	</body>
 </html>
