fixed list and link
the link back to main page was missing a quote and the list had opening tags instead of closing

--- a/recipes/burger.html
+++ b/recipes/burger.html
@@ -9,10 +9,10 @@
 		<h3><b>ingridients<b></h3>
 		
 		<ul>
-		<li>burger patty<li>
-		<li>two pices of bread<li>
-		<li>ketchup<li>
-		<li>oil<li>
+		<li>burger patty</li>
+		<li>two pices of bread</li>
+		<li>ketchup</li>
+		<li>oil</li>
 		</ul>
 
 		<h3><b>instructions<b></h3>
@@ -21,6 +21,6 @@
                     Step four is to wait till the patty has become brown to your liking. Step five is to put the patty in between the slices of bread. <br>
 	            Step six is to add ketchup between those same slices. Step seven is to enjoy in good health and moderation! </p>
 		<br>
-		<a href="../index.html>back to main page</a>
+		<a href="../index.html">back to main page</a>
 	</body>
 </html>
